--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </div>
                 <div class="detail-item">
                     <span class="label">College Name :</span>
-                    <span class="value">K.P COME RC (VNSGU), SURAT</span>
+                    <span class="value">K.P COMMERCE (VNSGU), SURAT</span>
                 </div>
                 <div class="detail-item">
                     <span class="label">Job/Occupation :</span>
