Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
                 <div class="detail-item">
                     <span class="label">Blood Group :</span>
-                    <span class="value">B+</span>
+                    <span class="value">O+</span>
                 </div>
                 <div class="detail-item">
                     <span class="label">Hobbies :</span>
@@ -162,3 +162,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
